Complete fixing mobile horizontal scroll issue

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 }
 
 html {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,18 +18,23 @@ html {
 }
 
 .app-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   /* width: fit-content; */
   width: 100vw;
-  outline: 2px solid rgba(33, 221, 61, 0.819);
+  /* outline: 2px solid rgba(33, 221, 61, 0.819); */
 
   .project-components-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
   }
 
   .experience-education-wrapper {
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -44,7 +50,8 @@ html {
     .experience-wrapper,
     .education-wrapper {
       margin-bottom: 50px;
-      width: 50%;
+      width: 45%;
+      /* max-width: 600px; */
       height: fit-content;
       /* outline: 2px solid rgb(242, 255, 0); */
     }
