--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,15 +1,16 @@
 .footer {
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
   row-gap: 5px;
   column-gap: 30px;
   width: 100%;
-  max-width: 1200px;
+  /* max-width: 900px; */
   height: fit-content;
-  margin: 30px auto 5px auto;
+  margin: 30px 0 5px 0;
   padding-left: 35px;
-  /* outline: 2px solid pink; */
+  outline: 2px solid pink;
 }
